# bioslam

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-test-linux.yml  cpp-linter.yml  dockerfile-build.yml  dockerfile-test-v1.0.1.yml  dockerfile-test-v1.0.yml  dockerfile-test-v1.1.yml  dockerfile-test-v1.2.yml
cmake/: BioslamConfig.cmake.in
cmake/Modules/: CodeCoverage.cmake  FindTBB.cmake
docker/: Dockerfile  bioslam1.0.1-gtsam4.0.3-ubu20.Dockerfile  bioslam1.1-gtsam4.0.3-ubu20.Dockerfile  bioslam1.2-gtsam4.2-ubu23.Dockerfile  ubu-20.Dockerfile
examples/: CMakeLists.txt  exampleImuPoseEstimation.cpp  exampleLowerBodyEstimation.cpp
include/: VarStrToCharMap.h  bioutils.h  gtsamutils.h  imuNoiseModelHandler.h  imuPoseEstimator.h  lowerBodyPoseEstimator.h  mathutils.h  testutils.h
include/factors/: AngleBetweenAxisAndSegmentFactor.h  AngularVelocityFactor.h  ConstrainedJointCenterPositionFactor.h  ConstrainedJointCenterVelocityFactor.h  HingeJointFactors.h  MagPose3Factor.h  Point3Priors.h  Pose3Priors.h  SegmentLengthDiscrepancyFactor.h  SegmentLengthMagnitudeFactor.h
include/imu/: imu.h  imuNoiseModelHandler.h
matlab/examples/: imuPoseEstimationExample.m  lowerBodyPoseEstimationExample.m
matlab/src/: VarStrToCharMap.m  imuNoiseModelHandler.m  imuPoseEstimator.m  lowerBodyPoseEstimator.m
matlab/test/: imuPoseEstimatorUnitTest.m  testDistalImuAdjustmentPerDesiredJointAngles.m  testIpeInitialConditionBehavior.m  testSimpleEkf.m
matlab/utils/: ConstantBiasArrayToNativeTypes.m  GaussianFactorGraphToFactorVector.m  H5EasyAdd.m  ImuData.m  KeyVectorToUintKeyArray.m  NonlinearFactorGraphToFactorVector.m  Point3ArrayToMatrix.m  Pose3ArrayToPoint3Array.m  Pose3ArrayToRot3Array.m  Rot3ArrayToMatrices.m  Rot3ArrayToQuaternions.m  Rot3QuaternionConstructor.m  adjustDistalImuOrientationGivenDesiredAbAdAngle.m  adjustDistalImuOrientationGivenDesiredFlexExAngle.m  adjustDistalImuOrientationGivenDesiredIntExtRotAngle.m  adjustDistalImuTrajectoryForInboundJointAngles.m  adjustImuTrajectoryByDeltaRot.m  animateLowerBodySkeletalSystem.m  animateSingleImuPose.m  clinical3DofJcsAngles.m  combineH5Files.m  computePrincipalVariance.m  consistent3DofJcsAngles.m  dcmToQuat.m  determineVarType.m  determineVarTypeFromValuesAndKey.m  drawCuboid.m  filenameAppender.m  filterValuesByKeys.m  flattenedRotationMatrixTo3x3xNMatrix.m  getAllConstantBiasFromValues.m  getAllPose3FromValues.m  getAllVectorFromValues.m  getAnthroMeasure.m  getNearestIdx.m  getValueFromKnownKeyType.m  getValueFromUnknownKeyType.m  get_R_Imu_to_Segment.m  get_R_Pelvis_to_N.m  get_R_SacrumImu_to_Pelvis.m  (+32 more)
src/: VarStrToCharMap.cpp  bioutils.cpp  gtsamutils.cpp  imuNoiseModelHandler.cpp  imuPoseEstimator.cpp  lowerBodyPoseEstimator.cpp  mathutils.cpp  testutils.cpp
src/factors/: AngleBetweenAxisAndSegmentFactor.cpp  AngularVelocityFactor.cpp  ConstrainedJointCenterPositionFactor.cpp  ConstrainedJointCenterVelocityFactor.cpp  HingeJointFactors.cpp  MagPose3Factor.cpp  Point3Priors.cpp  Pose3Priors.cpp  SegmentLengthDiscrepancyFactor.cpp  SegmentLengthMagnitudeFactor.cpp
src/imu/: imu.cpp  imuNoiseModelHandler.cpp
test/: CMakeLists.txt
test/solution/: testImuEstimationSolution.cpp  testLowerBodyEstimationSolution.cpp
test/unit/: testAngleBetweenAxisAndSegmentFactor.cpp  testAngularVelocityFactor.cpp  testConstrainedJointCenterNormPositionFactor.cpp  testConstrainedJointCenterNormVelocityFactor.cpp  testConstrainedJointCenterPositionFactor.cpp  testConstrainedJointCenterVelocityFactor.cpp  testDistalImuAdjustmentPerJointAngles.cpp  testEkf.cpp  testGenericMath.cpp  testHingeJointConstraintNormErrorEstAngVel.cpp  testHingeJointConstraintVectorErrorEstAngVel.cpp  testImu.cpp  testImuNoiseModelHandler.cpp  testImuPoseEstimator.cpp  testJointAngleCalculation.cpp  testLowerBodyPoseEstimator.cpp  testMagnetometerFactors.cpp  testMaxAngleBetweenAxisAndSegmentFactor.cpp  testMaxMinSegmentLengthMagnitudeFactors.cpp  testMaxPoint3MagnitudeFactor.cpp  testMinAngleBetweenAxisAndSegmentFactor.cpp  testPoint3MagnitudeDifferenceFactor.cpp  testPose3CompassPrior.cpp  testPose3TranslationPrior.cpp  testRotateImuStateAboutPointAxisAngle.cpp  testSegmentLengthDiscrepancyFactor.cpp  testSegmentLengthMagnitudeFactor.cpp
wrap/: bioslam.h
